# mmutil

./: LICENSE  Makefile.am  Makefile.in  README.md  configure.ac  setup.py
aux/: ax_cxx_compile_stdcxx.m4
docs/: Makefile  Util-rmd.R  brain_colors.txt  example_aggregate_cells.html  example_aggregate_cells.rmd  example_annotate_cells.html  example_annotate_cells.rmd  example_brain_2018-05-03.html  example_brain_2018-05-03.rmd  example_brain_2020-01-20.html  example_cfa_cells.rmd  example_pancreas_2018-08-13.html  example_pancreas_2018-08-13.rmd  example_simulate_confounder.rmd  index.html  index.md  index.rmd
src/: .clang-format  Makefile.am  component_gaussian.hh  dpm.hh  eigen_io.hh  eigen_util.hh  io.hh  io_visitor.hh  link_community.hh  mmutil.cc  mmutil.hh  mmutil_aggregate_col.cc  mmutil_aggregate_col.hh  mmutil_aggregator.hh  mmutil_annotate.hh  mmutil_annotate_col.cc  mmutil_annotate_col.hh  mmutil_annotate_embedding.cc  mmutil_annotate_embedding.hh  mmutil_bbknn  mmutil_bbknn.cc  mmutil_bbknn.hh  mmutil_bgzf_util.hh  mmutil_cfa_col.cc  mmutil_cfa_col.hh  mmutil_cluster.hh  mmutil_col_score.cc  mmutil_collapse_match.cc  mmutil_collapse_match.hh  mmutil_connected_components.cc  mmutil_diff.cc  mmutil_diff.hh  mmutil_distribute_col.cc  mmutil_distribute_col.hh  mmutil_doublet_qc.cc  mmutil_doublet_qc.hh  mmutil_embedding.hh  mmutil_filter_col.cc  mmutil_filter_col.hh  mmutil_filter_row.cc  (+51 more)
src/inference/: .clang-format  adam.hh  component_gaussian.hh  dpm.hh  dummy.hh  param_beta.hh  param_col_slab.hh  param_col_slab_zero.hh  param_col_spike_gamma.hh  param_col_spike_slab.hh  param_mixture.hh  param_row_spike_slab.hh  param_slab.hh  param_spike_gamma.hh  param_spike_slab.hh  parameters.hh  representation_gaussian.hh  sampler.hh  sgd_regression.hh  sgd_representation_gaussian.hh
src/utils/: .clang-format  bgzstream.cc  bgzstream.hh  check.hh  eigen_util.hh  graph.hh  gzstream.cc  gzstream.hh  io.hh  math.hh  net_util.hh  net_util_impl.hh  progress.hh  std_util.hh  strbuf.hh  tuple_util.hh  util.hh
